# fastapi-backend-course

.github/workflows/: style_check.yml
git/src/: main.py
simple_backend/src/task_tracker/: .pre-commit-config.yaml  README.md  classes.py  env.example  main.py  pyproject.toml  schemas.py  settings.py
simple_backend/task_tracker/: .pre-commit-config.yaml  pyproject.toml  schemas.py
simple_backend/task_tracker/data/: tasks.json
