[project]
name = "task-tracker"
version = "0.1.0"
description = ""
authors = [
    {name = "Vladislav Ibraev",email = "vladislavibraev@gmail.com"}
]
readme = "README.md"
requires-python = "==3.12.10"
dependencies = [
    "fastapi (>=0.116.1,<0.117.0)",
    "uvicorn[standard] (>=0.35.0,<0.36.0)",
    "pydantic-settings (>=2.10.1,<3.0.0)",
    "requests (>=2.32.5,<3.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.group.dev.dependencies]
ruff = "^0.12.11"
pre-commit = "^4.3.0"
